@@ -2,7 +2,7 @@ MCS_FLAGS=-debug
 halsharpdir=$(pkglibdir)
 halsharp_SCRIPTS = hal-sharp.dll
 EXTRA_DIST = $(halsharp_sources) HalTest.cs hal-sharp.dll.config.in
-CLEANFILES = hal-sharp.dll hal-sharp.exe 
+CLEANFILES = hal-sharp.dll hal-test.exe 
 DISTCLEANFILES = Makefile.in *.mdb AssemblyInfo.cs hal-sharp.dll.config
 
 halsharp_sources = \
@@ -16,14 +16,14 @@ halsharp_sources = \
 
 halsharp_build_sources = $(addprefix $(srcdir)/, $(halsharp_sources))
 
-all: hal-sharp.dll hal-sharp.exe
+all: hal-sharp.dll hal-test.exe
 
 hal-sharp.dll: $(halsharp_build_sources)
 	$(MCS) $(MCS_FLAGS) -target:library -out:$@ -r:Mono.Posix $(halsharp_build_sources)
 
-hal-sharp.exe: HalTest.cs
+hal-test.exe: HalTest.cs
 	$(MCS) $(MCS_FLAGS) -r:hal-sharp.dll -out:$@ HalTest.cs
 
 run:
-	mono hal-sharp.exe
+	mono hal-test.exe
 
